<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_camera"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/nav_camera"/>
        <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/nav_gallery"/>
        <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/nav_slideshow"/>
        <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_manage"/>
    </group>

    <item android:title="@string/nav_title_communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/nav_share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/nav_send"/>
        </menu>
    </item>

    <group
            android:id="@+id/menu_group_2"
            android:checkableBehavior="single">
        <!-- item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/nav_about" />
        <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/nav_help" />
        <item
                android:id="@+id/nav_logoff"
                android:icon="@drawable/ic_menu_sign_off"
                android:title="@string/nav_logoff" / -->
        <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_exit"
                android:title="@string/nav_exit" />
    </group>

</menu>
